k8s/bike-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bike-service
  namespace: proyecto-final
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bike-service
  template:
    metadata:
      labels:
        app: bike-service
    spec:
      containers:
        - name: bike-service
          image: javiimiralles/bike-service:v1.1
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
