k8s/bike-service/service.yml
apiVersion: v1
kind: Service
metadata:
  name: bike-service
spec:
  selector:
    app: bike-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
