k8s/bike-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bike-service-ingress
  namespace: proyecto-final
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: bike-service.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bike-service
                port:
                  number: 8080
